# gnn-recsys

./: .gitignore  AGENTS.md  INFERENCE_README.md  README.md  best_lightgcn_v4.pt  best_lightgcn_v5.pt  book.md  c_recsys_dl_v3.ipynb  c_recsys_gnn_v3.ipynb  c_recsys_gnn_v4.ipynb  c_recsys_gnn_v4_fast.ipynb  c_recsys_gnn_v5.ipynb  ccc21_evaluation_report.md  create_v9_variants.py  data_analysis_report.md  g_recsys_dl_v1.ipynb  g_recsys_dl_v2.ipynb  g_recsys_gnn_v1.ipynb  g_recsys_gnn_v2.ipynb  gem3.md  inference.py  model_comparison_report.md  plan.md  predictions.csv  predictions_gnn_v3.csv  presentation.md  pyproject.toml  script.md  update_v10a.py
artifacts/: lightgcn_latest.pt  lightgcn_v2_best.pt
cc/: cca1.ipynb  cca2.ipynb  ccb1.ipynb  ccb2.ipynb  ccc1.ipynb  ccc2.ipynb  ccc21.ipynb  ccc22.ipynb  ccc3.ipynb  ccccc.ipynb
cc_docs/: brainstorming_v1.md  improvement_strategies.md  improvement_strategies_v2.md
cc_models/: cca1_best.pt  cca2_best.pt  ccb1_best.pt  ccb2_best.pt  ccc21_params.json  ccc3_best.pt  ccc_model_final.pt
claude_made/: best_lightgcn_v10a.pt  best_lightgcn_v10b.pt  best_lightgcn_v4b.pt  best_lightgcn_v6.pt  best_lightgcn_v7.pt  best_lightgcn_v8.pt  best_lightgcn_v8b.pt  best_lightgcn_v9a.pt  best_lightgcn_v9b.pt  c_recsys_dl_v2.ipynb  c_recsys_gnn_v2.ipynb  c_recsys_gnn_v3.ipynb  recsys_v10a.ipynb  recsys_v10b.ipynb  recsys_v4b.ipynb  recsys_v6.ipynb  recsys_v6b.ipynb  recsys_v7.ipynb  recsys_v8.ipynb  recsys_v8b.ipynb  recsys_v9a.ipynb  recsys_v9b.ipynb
codex/: codexa1.ipynb  codexa2.ipynb  codexb1.ipynb  codexb2.ipynb  common.py
(+82 files in other folders)
